# dev-password-tool

./: .gitignore  README.md  generate_icons.py  index.html  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: base64_cmd.rs  hash_cmd.rs  mod.rs  password_cmd.rs  ssh_cmd.rs  token_cmd.rs
src-tauri/src/crypto/: base64_tool.rs  hash.rs  mod.rs  password.rs  ssh.rs  token.rs
src/components/: CopyButton.tsx  OutputBox.tsx  PageHeader.tsx  Sidebar.tsx  StrengthMeter.tsx
src/hooks/: useClipboard.ts
src/pages/: Base64Page.tsx  HashPage.tsx  PasswordPage.tsx  SshPage.tsx  TokenPage.tsx
src/utils/: constants.ts  types.ts
