[package]
name = "dev-password-tool"
version = "1.0.1"
edition = "2021"
description = "A lightweight, offline-first desktop cryptographic utility for developers"
authors = ["Dev Password Tool"]

[lib]
name = "dev_password_tool_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
sha2 = "0.10"
bcrypt = "0.15"
base64 = "0.22"
hex = "0.4"
ssh-key = { version = "0.6", features = ["ed25519", "rsa", "encryption", "rand_core"] }
zeroize = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
